[gd_scene load_steps=2 format=3 uid="uid://dflfdehjqxdlu"]

[ext_resource type="Script" uid="uid://bv7x0cav6ntp3" path="res://scripts/achievement/achievement.gd" id="1_w5aqf"]

[node name="Achievement" type="GridContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.5
offset_top = -316.0
offset_right = 252.5
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w5aqf")

[node name="Title" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Achievement"
horizontal_alignment = 1

[node name="Content" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CurrentRank" type="Label" parent="Content/VBox"]
layout_mode = 2
text = "Rank:
None
(XX to go)"
horizontal_alignment = 1

[node name="AchievementList" type="ScrollContainer" parent="Content/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="Content/VBox/AchievementList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Confirm" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="AchievementToGo" type="Label" parent="Confirm"]
layout_mode = 2
text = "0/50 achievements to go!"

[node name="Close" type="Button" parent="Confirm"]
layout_mode = 2
text = "Close"
